Revert "fixed horizontal scroll bar appearing when not needed"
This reverts commit 57a589ebb644f2eddbbc0aad3a10f7c5cdc8b0f5.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,8 +91,6 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
-		overflow-x: hidden;
-		overflow-y: auto;
 	}
 
 	*, *:before, *:after {
@@ -1123,7 +1121,6 @@ input, select, textarea {
 		left: 0;
 		width: 100%;
 		height: 100vh;
-		height: 100svh;
 		z-index: 1;
 	}
 
@@ -1208,7 +1205,6 @@ input, select, textarea {
 		justify-content: space-between;
 		position: relative;
 		min-height: 100vh;
-		min-height: 100svh;
 		width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
@@ -1760,8 +1756,6 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
-		overflow-x: hidden;
-		overflow-y: auto;
 	}
 
 	*, *:before, *:after {
@@ -2875,7 +2869,6 @@ input, select, textarea {
 		justify-content: space-between;
 		position: relative;
 		min-height: 100vh;
-		min-height: 100svh;
 		width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
